Finishing the page.

--- a/css/header.scss
+++ b/css/header.scss
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+
 
     .header__right {
         display: flex;
