--- a/index.css
+++ b/index.css
@@ -1,12 +1,72 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 20px; }
+  padding: 20px;
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05); }
   .header .header__right {
     display: flex;
     align-items: center; }
   .header .header__navigations {
     margin-right: 20px; }
 
-body {
-  background: #ddd; }
+.pricing {
+  width: 760px;
+  margin: 0 auto;
+  text-align: center; }
+  .pricing .pricing__title {
+    font-weight: 300;
+    margin: 50px 0; }
+  .pricing .pricing__description {
+    font-size: 20px;
+    font-weight: 300; }
+
+.plans {
+  width: 960px;
+  margin: 50px auto 100px; }
+
+.plan {
+  border-radius: 5px;
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.125); }
+  .plan .plan__name {
+    padding: 10px 0;
+    background-color: rgba(0, 0, 0, 0.03);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    font-size: 30px;
+    font-weight: bold; }
+  .plan .plan__content {
+    padding: 20px; }
+  .plan .plan__duration {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    color: #666;
+    font-size: 30px; }
+  .plan .plan__price {
+    font-size: 40px;
+    color: initial; }
+
+.plan--pro .plan__name {
+  color: #3EA9F5; }
+
+.plan--enterprise .plan__name {
+  color: #F27398; }
+
+.footer {
+  width: 960px;
+  height: 200px;
+  margin: 50px auto; }
+  .footer .footer__company-name {
+    font-size: 20px;
+    font-weight: bold; }
+  .footer .footer__copy-right {
+    color: #ddd;
+    font-style: italic;
+    font-size: 12px; }
+  .footer .footer__title {
+    margin-bottom: 10px; }
+  .footer .footer__link {
+    display: block;
+    color: #666; }
