--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,5 @@
 @import "./css/header.scss";
-
-body {
-    background: #ddd;
-}
+@import "./css/pricing.scss";
+@import "./css/plans.scss";
+@import "./css/plan.scss";
+@import "./css/footer.scss";
